--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,10 @@ body {
 
 .inputs {
   margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
 input[type="text"] {
@@ -112,4 +116,16 @@ input[type="text"] {
   box-sizing: border-box;
   border-radius: 4px;
   border: 1px solid #ccc;
+  height: 60px; 
+}
+
+.input-group {
+  flex: 1 1 45%; /* Takes up about 45% of the width, adjusts for narrow screens */
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin-bottom: 5px;
+  font-weight: bold;
 }
